--- a/json.html
+++ b/json.html
@@ -1,16 +1,243 @@
-[
-  {
-    "nome": "João",
-    "servidor": "Servidor1",
-    "chavePix": "joao@pix.com",
-    "validade": "20/04/2025",
-    "app": "AppX"
-  },
-  {
-    "nome": "Maria",
-    "servidor": "Servidor2",
-    "chavePix": "maria@pix.com",
-    "validade": "21/04/2025",
-    "app": "AppY"
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Painel Master</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #001f3f, #0074D9);
+      color: white;
+      padding: 20px;
+    }
+
+    .login, .painel {
+      max-width: 600px;
+      margin: auto;
+      background: rgba(255, 255, 255, 0.05);
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    h2 {
+      text-align: center;
+    }
+
+    input, select, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+    }
+
+    button {
+      background-color: #0074D9;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+
+    .usuario {
+      background-color: rgba(0, 0, 0, 0.1);
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 10px;
+    }
+
+    .usuario.vencido {
+      border-left: 4px solid red;
+    }
+
+    .usuario.quase-vencido {
+      border-left: 4px solid orange;
+    }
+
+    #infinity {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 24px;
+      background: linear-gradient(45deg, red, yellow, green, cyan, blue, magenta);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .whatsapp-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 30px;
+      box-shadow: 0 0 10px #111;
+    }
+  </style>
+</head>
+<body>
+
+<div id="infinity">∞</div>
+
+<div class="login" id="login">
+  <h2>Login do Painel</h2>
+  <input type="text" id="usuarioLogin" placeholder="Usuário">
+  <input type="password" id="senhaLogin" placeholder="Senha">
+  <button onclick="logar()">Entrar</button>
+</div>
+
+<div class="painel hidden" id="painel">
+  <h2>Painel Master</h2>
+
+  <input type="text" id="nome" placeholder="Nome do Usuário">
+  <input type="text" id="servidor" placeholder="Servidor">
+  <input type="text" id="chavePix" placeholder="Chave PIX">
+  <input type="text" id="validade" placeholder="Validade (dd/mm/aaaa)" oninput="formatarData(this)">
+  <input type="text" id="app" placeholder="App Instalado">
+  <button onclick="salvarUsuario()">Salvar</button>
+
+  <input type="text" id="busca" placeholder="Buscar por nome" oninput="mostrarUsuarios()">
+  <select id="filtroServidor" onchange="mostrarUsuarios()">
+    <option value="">Todos os Servidores</option>
+  </select>
+
+  <div id="listaUsuarios"></div>
+
+  <button onclick="baixarJson()">Baixar Arquivo JSON</button>
+</div>
+
+<a href="https://wa.me/SEUNUMERO" class="whatsapp-button" target="_blank">✉️</a>
+
+<script>
+  const loginInfo = { usuario: "admin", senha: "1234" };
+
+  function logar() {
+    const u = document.getElementById("usuarioLogin").value;
+    const s = document.getElementById("senhaLogin").value;
+    if (u === loginInfo.usuario && s === loginInfo.senha) {
+      document.getElementById("login").classList.add("hidden");
+      document.getElementById("painel").classList.remove("hidden");
+      mostrarUsuarios();
+    } else {
+      alert("Usuário ou senha incorretos!");
+    }
   }
-]
+
+  function formatarData(input) {
+    let v = input.value.replace(/\D/g, '');
+    if (v.length > 2) v = v.slice(0, 2) + '/' + v.slice(2);
+    if (v.length > 5) v = v.slice(0, 5) + '/' + v.slice(5, 10);
+    input.value = v;
+  }
+
+  function salvarUsuario() {
+    const nome = document.getElementById("nome").value;
+    const servidor = document.getElementById("servidor").value;
+    const chavePix = document.getElementById("chavePix").value;
+    const validade = document.getElementById("validade").value;
+    const app = document.getElementById("app").value;
+
+    if (!nome) return alert("Preencha o nome");
+
+    const usuarios = JSON.parse(localStorage.getItem("usuarios") || "[]");
+
+    const index = usuarios.findIndex(u => u.nome === nome);
+    const novo = { nome, servidor, chavePix, validade, app };
+    
+    if (index >= 0) {
+      usuarios[index] = novo;
+    } else {
+      usuarios.push(novo);
+    }
+
+    // Gravar no localStorage
+    localStorage.setItem("usuarios", JSON.stringify(usuarios));
+
+    limparCampos();
+    mostrarUsuarios();
+  }
+
+  function limparCampos() {
+    document.getElementById("nome").value = '';
+    document.getElementById("servidor").value = '';
+    document.getElementById("chavePix").value = '';
+    document.getElementById("validade").value = '';
+    document.getElementById("app").value = '';
+  }
+
+  function mostrarUsuarios() {
+    const usuarios = JSON.parse(localStorage.getItem("usuarios") || "[]");
+    const lista = document.getElementById("listaUsuarios");
+    const busca = document.getElementById("busca").value.toLowerCase();
+    const filtro = document.getElementById("filtroServidor").value;
+
+    lista.innerHTML = '';
+    const servidores = new Set();
+
+    usuarios.forEach((u, i) => {
+      if (
+        (filtro && u.servidor !== filtro) ||
+        (busca && !u.nome.toLowerCase().includes(busca))
+      ) return;
+
+      const hoje = new Date();
+      const partes = u.validade.split('/');
+      const validade = new Date(partes[2], partes[1] - 1, partes[0]);
+      const dias = Math.floor((validade - hoje) / (1000 * 60 * 60 * 24));
+
+      let classe = '';
+      if (dias < 0) classe = 'vencido';
+      else if (dias <= 3) classe = 'quase-vencido';
+
+      const div = document.createElement("div");
+      div.className = `usuario ${classe}`;
+      div.innerHTML = `
+        <strong>${u.nome}</strong><br>
+        Servidor: ${u.servidor}<br>
+        PIX: ${u.chavePix}<br>
+        Validade: ${u.validade}<br>
+        App: ${u.app}<br>
+        <button onclick="editarUsuario('${u.nome}')">Editar</button>
+        <button onclick="excluirUsuario('${u.nome}')">Excluir</button>
+      `;
+      lista.appendChild(div);
+      servidores.add(u.servidor);
+    });
+
+    const filtroServidor = document.getElementById("filtroServidor");
+    filtroServidor.innerHTML = '<option value="">Todos os Servidores</option>';
+    servidores.forEach(s => {
+      const opt = document.createElement("option");
+      opt.value = s;
+      opt.textContent = s;
+      filtroServidor.appendChild(opt);
+    });
+  }
+
+  function editarUsuario(nome) {
+    const usuarios = JSON.parse(localStorage.getItem("usuarios") || "[]");
+    const u = usuarios.find(u => u.nome === nome);
+    if (!u) return;
+
+    document.getElementById("nome").value = u.nome;
+    document.getElementById("servidor").value = u.servidor;
+    document.getElementById("chavePix").value = u.chavePix;
+    document.getElementById("validade").value = u.validade;
+    document
